# chrome-browser-magnet

./: .gitignore  README.md  magnet-chromium-extension.patch  update_patch.sh
magnet-extension/: index.html  main.js  manifest.json  script.js
magnet-extension/styles/: main.css
magnet-npapi/: .gitignore  CMakeLists.txt  breaks.txt  cmake_debug_chromeos.sh  copy_magnet.sh  launch_chromium.sh  launch_debug.sh  make_dist.sh
magnet-npapi/magnet/agent_include/: FileReceiver.h  FileTransfer.h  MagnetChannelManager.h  MagnetInterface.h  MeshMessageReceiver.h  Platform.h
magnet-npapi/magnet/core_include/: FileTransferFetch.h  FileTransferThread.h  MagnetStruct.h  MagnetUdp.h
magnet-npapi/magnet/native_include/: MagnetErrorCode.h
magnet-npapi/src/: CMakeLists.txt  manifest.json  np_entry.cc  npp_entry.cc  npruntime.h  plugin.cc  plugin.h  test.html  testclient  testclient.cpp
magnet/agent_include/: FileSender.h  MeshMessaging.h  ServiceConstants.h  log.h  stringconverter.h
magnet/core_include/: FileTransferIO.h  MagnetCallBack.h  MagnetCore.h  MagnetMsg.h  MagnetPeer.h  MagnetSend.h  MagnetUtil.h  Native.h  constants.h
magnet/native_include/: Magnet.h  MagnetListener.h
quickserve/: python2-xynehttpserver-2012.12.24.2.diff  python2-xynehttpserver-2012.12.24.2.new.bz2
src/: CMakeLists.txt  plugin.cc  test.html
